modifi avec motos

--- a/index1.html
+++ b/index1.html
@@ -5,6 +5,6 @@
 		<title></title>
 	</head>
 	<body>
-		<h1> location de voitures anciennes</h1>
+		<h1> location de motos anciennes</h1>
 	</body>
 </html>
