changement du fond en violet

--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,12 @@
 	<head>
 		<title></title>
 	</head>
-	<body>
+	<body bgcolor="#9b59b6">
 		<h1> location de motos anciennes</h1>
+
+		<table>
+			
+
+		</table>
 	</body>
 </html>
